[package]
name = "tls"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chacha20poly1305 = "0.10"
rand = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
rustls-pemfile = "2"
x509-parser = "0.16"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"  # for base32 decoding
